hphp/hack/test/typecheck/expression_trees/dot.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`"Hello" . " World\n"`;
}
